--- a/app/src/main/res/layout/fragment_commerces_list.xml
+++ b/app/src/main/res/layout/fragment_commerces_list.xml
@@ -1,20 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.commerces_list.CommercesListFragment">
 
-    <TextView
-        android:id="@+id/textViewA"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="101 Comercios"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_commerces"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/cardview_default"
+        android:backgroundTint="@color/secondary"
+        app:cardCornerRadius="@dimen/medium"
+        android:layout_margin="@dimen/medium"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@id/cardview_distance">
+
+        <TextView
+            android:id="@+id/total_commerces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/large"
+            android:layout_marginBottom="@dimen/large"
+            android:textSize="32sp"
+            tools:text="101"
+            android:layout_gravity="start|center"
+            android:textColor="@color/white"/>
+
+        <TextView
+            android:id="@+id/tv_commerces"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/large"
+            android:layout_marginTop="@dimen/large"
+            android:textSize="18sp"
+            android:text="Comercios"
+            android:layout_gravity="center_vertical"
+            android:textColor="@color/white" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_distance"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/cardview_default"
+        android:backgroundTint="@color/white"
+        app:cardCornerRadius="@dimen/medium"
+        android:layout_margin="@dimen/medium"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/cardview_commerces"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
