--- a/app/src/main/res/layout/fragment_commerce_detail.xml
+++ b/app/src/main/res/layout/fragment_commerce_detail.xml
@@ -11,10 +11,11 @@
         android:id="@+id/map_container"
         layout="@layout/fragment_map"
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="225dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.38" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
