--- a/app/src/main/res/layout/fragment_commerces_list.xml
+++ b/app/src/main/res/layout/fragment_commerces_list.xml
@@ -90,10 +90,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/item_categories"
-        tools:itemCount="1"/>
+        tools:itemCount="1">
 
+    </androidx.recyclerview.widget.RecyclerView>
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_commerces"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/medium"
+        android:layout_marginVertical="@dimen/large"
+        app:layout_constraintTop_toBottomOf="@id/rv_categories"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_commerce"
+        tools:itemCount="3"/>
 
     <include
         android:id="@+id/progressBarApp"
