--- a/app/src/main/res/layout/item_categories.xml
+++ b/app/src/main/res/layout/item_categories.xml
@@ -4,10 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="@dimen/medium"
-    android:layout_marginVertical="@dimen/medium"
+    android:layout_marginVertical="@dimen/small"
     android:layout_marginEnd="@dimen/medium"
     android:elevation="@dimen/small"
-    android:layout_width="150dp"
+    android:layout_width="158dp"
     android:layout_height="wrap_content"
     android:background="@color/white">
 
