--- a/app/src/main/res/layout/item_commerce.xml
+++ b/app/src/main/res/layout/item_commerce.xml
@@ -55,17 +55,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/view_category_color"/>
 
-        <ImageView
-            android:id="@+id/im_commerce"
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardview_image_commerce"
             android:layout_width="76dp"
             android:layout_height="76dp"
-            android:layout_margin="@dimen/large"
-            android:scaleType="centerCrop"
+            android:layout_marginHorizontal="@dimen/large"
+            android:layout_marginVertical="24dp"
+            app:cardCornerRadius="@dimen/medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/view_category_color"
+            app:layout_constraintTop_toBottomOf="@id/view_category_color">
+
+        <ImageView
+            android:id="@+id/im_commerce"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
             android:src="@drawable/only_image"
             android:contentDescription="Commerce image" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tv_title"
@@ -73,15 +83,15 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/large"
             android:text="Lorem ipsum"
-            android:textSize="24sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
             app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/im_commerce"
-            app:layout_constraintTop_toTopOf="@id/im_commerce" />
+            app:layout_constraintStart_toEndOf="@+id/cardview_image_commerce"
+            app:layout_constraintTop_toTopOf="@id/cardview_image_commerce" />
 
         <TextView
             android:id="@+id/tv_subtitle"
@@ -89,13 +99,13 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/large"
             android:text="Lorem ipsum dolor"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:maxLines="1"
             android:ellipsize="end"
-            app:layout_constraintBottom_toBottomOf="@id/im_commerce"
+            app:layout_constraintBottom_toBottomOf="@id/cardview_image_commerce"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/im_commerce"
+            app:layout_constraintStart_toEndOf="@+id/cardview_image_commerce"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
