Get current device location

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,6 +22,12 @@
         <argument
             android:name="commerceDetail"
             app:argType="website.italojar.klikincommerces.presentation.model.CommerceDetailVO" />
+        <argument
+            android:name="latitude"
+            app:argType="float" />
+        <argument
+            android:name="longitude"
+            app:argType="float" />
     </fragment>
 
 </navigation>
