Added feature filter commerces by category and update progress bar

--- a/app/src/main/res/layout/fragment_commerces_list.xml
+++ b/app/src/main/res/layout/fragment_commerces_list.xml
@@ -41,6 +41,16 @@
             android:layout_gravity="center_vertical"
             android:textColor="@color/white" />
 
+        <include
+            android:id="@+id/progressBarTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/medium"
+            android:layout_marginBottom="@dimen/large"
+            android:layout_gravity="start|center"
+            android:visibility="gone"
+            layout="@layout/progressbar"/>
+
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
